Update index.jade - added a copy button for each color that appears on small devices

--- a/app/index.jade
+++ b/app/index.jade
@@ -131,11 +131,13 @@ html(lang='ru')
                                         p(data-color-value="7641 C") Pantone 7641 C
                                         p(data-color-value="#922c48") web #922c48
                                         p(data-color-value="29,90,47,29") CMYK 29 90 47 29
+                                        p(data-color-value="#922c48") Скопировать
                                 li.palette__colors-item(style="background-color: #1E1E1C;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="7641C") Pantone 7641 C
                                         p(data-color-value="#922c48") web #922c48
                                         p(data-color-value="29,90,47,29") CMYK 29 90 47 29
+                                        p(data-color-value="#922c48") Скопировать
                 section.palette#palette-cat
                     .container
                         .palette__inner
@@ -153,21 +155,25 @@ html(lang='ru')
                                         p(data-color-value="7641 C") Pantone - 7641 C
                                         p(data-color-value="#922c48") web #922c48
                                         p(data-color-value="29,90,47,29") CMYK 29 90 47 29
+                                        p(data-color-value="#922c48") Скопировать
                                 li.palette__colors-item(style="background-color: #f29934;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="2011 C") Pantone 2011 C
                                         p(data-color-value="#f29934") web #f29934
                                         p(data-color-value="2,47,84,0") CMYK 2 47 84 0
+                                        p(data-color-value="#f29934") Скопировать
                                 li.palette__colors-item(style="background-color: #feaebb;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="0331 C") Pantone Red 0331 C
                                         p(data-color-value="#feaebb") web #feaebb
                                         p(data-color-value="0,43,14,0") CMYK 0 43 14 0
+                                        p(data-color-value="#feaebb") Скопировать
                                 li.palette__colors-item(style="background-color: #6e7ba0;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="7667 C") Pantone 7667 C
                                         p(data-color-value="#6e7ba0") web #6e7ba0
                                         p(data-color-value="63,48,20,4") CMYK 63 48 20 4
+                                        p(data-color-value="#6e7ba0") Скопировать
                 section.palette#palette-dog
                     .container
                         .palette__inner
@@ -185,41 +191,49 @@ html(lang='ru')
                                         p(data-color-value="Pantone 692 C") Pantone 692 C
                                         p(data-color-value="#e5bec3") web #e5bec3
                                         p(data-color-value="10,31,17,0") CMYK 10 31 17 0
+                                        p(data-color-value="#e5bec3") Скопировать
                                 li.palette__colors-item(style="background-color: #96262c;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="7622 C") Pantone 7622 C
                                         p(data-color-value="#96262c") web #96262c
                                         p(data-color-value="27,94,77,27") CMYK 27 94 77 27
+                                        p(data-color-value="#96262c") Скопировать
                                 li.palette__colors-item(style="background-color: #ff8300;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="151 C") Pantone 151 C
                                         p(data-color-value="#ff8300") web #ff8300
                                         p(data-color-value="0,59,94,0") CMYK 0 59 94 0
+                                        p(data-color-value="#ff8300") Скопировать
                                 li.palette__colors-item(style="background-color: #ab0033;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="207 C") Pantone 207 C
                                         p(data-color-value="#ab0033") web #ab0033
                                         p(data-color-value="22,100,67,17") CMYK 22 100 67 17
+                                        p(data-color-value="#ab0033") Скопировать
                                 li.palette__colors-item(style="background-color: #006241;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="3425 C") Pantone 3425 C
                                         p(data-color-value="#006241") web #006241
                                         p(data-color-value="96,33,82,29") CMYK 96 33 82 29
+                                        p(data-color-value="#006241") Скопировать
                                 li.palette__colors-item(style="background-color: #d65d72;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="702 C") Pantone 702 C
                                         p(data-color-value="#d65d72") web #d65d72
                                         p(data-color-value="11,75,39,2") CMYK 11 75 39 2
+                                        p(data-color-value="#d65d72") Скопировать
                                 li.palette__colors-item(style="background-color: #93a7cb;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="7681 C") Pantone 7681 C
                                         p(data-color-value="#93a7cb") web #93a7cb
                                         p(data-color-value="48,30,8,0") CMYK 48 30 8 0
+                                        p(data-color-value="#93a7cb") Скопировать
                                 li.palette__colors-item(style="background-color: #007580;")
                                     .palette__colors-item__info.palette__colors-item__info--white
                                         p(data-color-value="7714 C") Pantone 7714 C
                                         p(data-color-value="#007580") web #007580
                                         p(data-color-value="99,26,43,15") CMYK 99 26 43 15
+                                        p(data-color-value="#007580") Скопировать
 
             .fonts__wrapper
                 .container
