#1 at now copy button added for devices which width < 991px #2 change packages scroll speed and adaptive

--- a/app/index.jade
+++ b/app/index.jade
@@ -88,10 +88,9 @@ html(lang='ru')
                                     img.jarallax-img(src='./images/content/packages--left.webp' alt='упаковки' srcset="./images/content/packages--left.webp 1x, ./images/content/packages--left@2x.webp 2x")
                                 .jarallax.packages__image--right
                                     img.jarallax-img(src='./images/content/packages--right.webp' alt='упаковки' srcset="./images/content/packages--right.webp 1x, ./images/content/packages--right@2x.webp 2x")
+                                .jarallax.packages__image--mini
+                                    img.jarallax-img(src="./images/content/packages--mini.webp" alt="упаковки" srcset="./images/content/packages--mini.webp 1x, ./images/content/packages--mini@2x.webp 2x")
 
-
-                                //- img(src="./images/content/packages.webp" alt="упаковки")
-                                //- img(src="./images/content/packages--mini.webp" alt="упаковки" srcset="./images/content/packages--mini.webp 1x, ./images/content/packages--mini@2x.webp 2x")
             .logotype__wrapper
                 +section('white', 'logotype', 'Логотип')
                     .logotype__logo-wrapper
