fix packages parallax section

--- a/app/index.jade
+++ b/app/index.jade
@@ -84,8 +84,11 @@ html(lang='ru')
                             .packages__cat
                                 img(src="./images/content/packages-cat.webp" alt="Кот" srcset="./images/content/packages-cat.webp 1x, ./images/content/packages-cat@2x.webp 2x")
                             .packages__image
-                                .jarallax.packages__image--left
+                                .jarallax.packages__image--left__tablet
                                     img.jarallax-img(src='./images/content/packages--left.webp' alt='упаковки' srcset="./images/content/packages--left.webp 1x, ./images/content/packages--left@2x.webp 2x")
+                                .jarallax.packages__image--left__desktop
+                                    img.jarallax-img(src='./images/content/packages--left-desktop.png' alt='упаковки')
+                                    //- img.jarallax-img(src='./images/content/packages--left.webp' alt='упаковки' srcset="./images/content/packages--left.webp 1x, ./images/content/packages--left@2x.webp 2x")
                                 .jarallax.packages__image--right
                                     img.jarallax-img(src='./images/content/packages--right.webp' alt='упаковки' srcset="./images/content/packages--right.webp 1x, ./images/content/packages--right@2x.webp 2x")
                                 .packages__image--mini
