--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -15,6 +15,7 @@ body {
 body.body {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 
     @include font(16px, 162%, $black-color) {
         @extend %stratos-lc-web-400;
