--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -626,7 +626,7 @@ body {
         align-items: flex-end;
 
         cursor: pointer;
-        transition: min-width .3s $transitionTimingFunc;
+        transition: width .3s $transitionTimingFunc;
 
         &__info {
             max-height: 0;
@@ -698,25 +698,42 @@ body {
 
     .palette__colors-item__info {
         display: flex;
-        transition: max-width 0.2s linear 0.2s, max-height 0.2s linear 0.2s, opacity 0.3s linear 0.3s;
+        transition: max-height 0.2s linear 0.2s, opacity 0.3s linear 0.3s;
         max-height: 100%;
         opacity: 1;
     }
 }
 
-#palette-cat .palette__colors-item {
-    min-width: 25%;
+#palette-cat {
+    .palette__colors-hover--onitem.palette__colors:hover {
+        .palette__colors-item {
+            width: calc(70% / 3);
+        }
 
-    &:hover {
-        min-width: 506px;
+        .palette__colors-item:hover {
+            width: 506px;
+        }
+    }
+
+    .palette__colors-item {
+        width: 350px;
     }
 }
-#palette-dog .palette__colors-item {
-    min-width: 16.6%;
 
-    &:hover {
-        min-width: 506px;
+#palette-dog {
+    .palette__colors-hover--onitem.palette__colors:hover {
+        .palette__colors-item {
+            width: calc(70% / 7);
+        }
+
+        .palette__colors-item:hover {
+            width: 506px;
+        }
     }
+
+    .palette__colors-item {
+        width: 12.5%;
+    }   
 }
 
 .fonts {
