#1 moved the dog on mobile devices #2 fixed the narrow color on hover in the #palette-dog section

--- a/app/components/organisms/footer.jade
+++ b/app/components/organisms/footer.jade
@@ -60,12 +60,12 @@ mixin footer()
                     .col-lg-6
                         p.footer__info-text Юридический адрес: 142000 Московская область, город Домодедово, Каширское шоссе, дом 7, офис 59
                     .col-lg-3
-                        a.footer__info-communication(href="#")
+                        a.footer__info-communication(href="tel:+74994440296")
                             svg
                                 use(xlink:href="./images/sprite.svg#phone")
-                            p +7 (499) 444 02 96
+                            p(readonly="true") +7 (499) 444 02 96
                     .col-lg-3
-                        a.footer__info-communication(href="#")
+                        a.footer__info-communication(href="mailto:hello@bowlwow.ru")
                             svg
                                 use(xlink:href="./images/sprite.svg#email")
                             p hello@bowlwow.ru
