--- a/app/components/organisms/footer.jade
+++ b/app/components/organisms/footer.jade
@@ -60,7 +60,7 @@ mixin footer()
                     .col-lg-6
                         p.footer__info-text Юридический адрес: 142000 Московская область, город Домодедово, Каширское шоссе, дом 7, офис 59
                     .col-lg-3
-                        a.footer__info-communication(href="tel:+74994440296")
+                        a.footer__info-communication(href="tel:+74994440296" id="footer-tel")
                             svg
                                 use(xlink:href="./images/sprite.svg#phone")
                             p(readonly="true") +7 (499) 444 02 96
