--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -703,8 +703,9 @@
         }
 
         &__image-dog {
-            height: 350px;
-            left: -80px;
+            width: 100%;
+            height: 337px;
+            left: 0;
         }
     }
 }
