--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -138,7 +138,7 @@
         }
 
         p {
-            color: #f2f2f2;
+            color: #f2f2f2 !important;
             line-height: 28px;
         }
     }
@@ -657,11 +657,12 @@ body {
         gap: 10px;
         margin: 0 0 118px 104px;
 
-
         p {
+            color: $black-color !important;
             position: relative;
             font-size: 20px;
             width: fit-content;
+            user-select: none;
 
             &:last-child {
                 display: none;
@@ -684,7 +685,9 @@ body {
         }
 
         &--white {
-            color: $white-color;
+            p {
+                color: $white-color !important;
+            }
 
             p::after {
                 @include bg-img(null, null, "../images/sprite.svg#copy", no-repeat, cover, center center);
@@ -737,7 +740,7 @@ body {
 
     .palette__colors-item {
         width: 12.5%;
-    }   
+    }
 }
 
 .fonts {
@@ -920,14 +923,14 @@ body {
         gap: 20px;
         width: 580px;
 
-        a {
-            .download-button {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 100%;
-            }
+        .download-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+        }
 
+        a {
             &:nth-child(1) {
                 grid-area: a;
             }
